syntax = "proto3";
package osmosis.superfluidmosmo;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/osmosis-labs/osmosis/v15/x/superfluid-mosmo/types";

message SuperfluidmOsmoIntermediaryAccount {
  // Denom indicates the denom of the superfluid asset.
  string denom = 1;
  string val_addr = 2;
  // perpetual gauge for rewards distribution
  /// Maybe below is unnecessary or at least, it's not suitable for the mOSMO intermediary account
  uint64 gauge_id = 3; 
}

message SuperfluidmOsmoDelegationRecord {
  string delegator_address = 1;
  string validator_address = 2;
  cosmos.base.v1beta1.Coin delegation_amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin equivalent_staked_amount = 4 [ 
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin" 
  ];
}
